@@ -106,7 +106,7 @@ public:
             sk_sp<SkColorSpace> dstColorSpace,
             std::unique_ptr<GrFragmentProcessor> inputFP,
             std::unique_ptr<GrFragmentProcessor> destColorFP,
-            sk_sp<SkData> uniforms,
+            sk_sp<const SkData> uniforms,
             SkSpan<std::unique_ptr<GrFragmentProcessor>> childFPs);
 
     /*
